<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="418dp"
        android:layout_height="150dp"
        android:background="@color/Gold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="158dp"
            android:layout_height="101dp"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="16dp"
            tools:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/Trainers01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Our_trainers"
            android:textColor="@color/Blue_001"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="117dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="420dp"
        android:layout_height="753dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="143dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="-7dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trainer_name"
                tools:layout_editor_absoluteX="168dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trainer_specialty"
                tools:layout_editor_absoluteX="168dp"
                tools:layout_editor_absoluteY="53dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="202dp"
                android:layout_height="42dp"
                android:text="@string/Specialty02"
                tools:layout_editor_absoluteX="195dp"
                tools:layout_editor_absoluteY="72dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer01"
                tools:layout_editor_absoluteX="196dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer02"
                tools:layout_editor_absoluteX="194dp"
                tools:layout_editor_absoluteY="153dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trainer_specialty"
                tools:layout_editor_absoluteX="167dp"
                tools:layout_editor_absoluteY="172dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="202dp"
                android:layout_height="42dp"
                android:text="@string/Specialty01"
                tools:layout_editor_absoluteX="194dp"
                tools:layout_editor_absoluteY="191dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trainer_name"
                tools:layout_editor_absoluteX="167dp"
                tools:layout_editor_absoluteY="135dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trainer_name"
                tools:layout_editor_absoluteX="168dp"
                tools:layout_editor_absoluteY="261dp" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="158dp"
                android:layout_height="101dp"
                tools:ignore="ContentDescription"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="261dp"
                tools:srcCompat="@drawable/trainer03" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="158dp"
                android:layout_height="101dp"
                tools:ignore="ContentDescription"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="16dp"
                tools:srcCompat="@drawable/trainer01" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="158dp"
                android:layout_height="101dp"
                tools:ignore="ContentDescription"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="135dp"
                tools:srcCompat="@drawable/trainer02" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer03"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="279dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trainer_specialty"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="298dp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="202dp"
                android:layout_height="42dp"
                android:text="@string/Specialty03"
                tools:layout_editor_absoluteX="196dp"
                tools:layout_editor_absoluteY="317dp" />

            <ImageView
                android:id="@+id/homeBtn"
                android:layout_width="78dp"
                android:layout_height="66dp"
                tools:ignore="ContentDescription,MissingConstraints"
                tools:layout_editor_absoluteX="171dp"
                tools:layout_editor_absoluteY="639dp"
                tools:srcCompat="@drawable/home"/>

            <View
                android:id="@+id/divider"
                android:layout_width="418dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="127dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="418dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="250dp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="418dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="371dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>